--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
   "main": "index.js",
   "scripts": {
     "devStart": "nodemon server.js",
+    "serverStart": "peerjs --port 3001",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "keywords": [],
